--- a/src/components/css/Calculator.css
+++ b/src/components/css/Calculator.css
@@ -5,9 +5,9 @@
 }
 
 .calculator {
-  width: 80vw;
-  height: 100vh;
-  margin: 0 auto;
+  width: 60vw;
+  height: 90vh;
+  margin: 5% auto;
   border: 1px solid #ccc;
   border-radius: 4px;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
@@ -26,12 +26,9 @@
 
 .keypad {
   width: 100%;
-  height: 20%;
-
-  /* display: grid; */
+  height: 85%;
+  display: grid;
   margin: 0;
-
-  /* grid-template-columns: repeat(4, 1fr); */
 }
 
 .row {
@@ -49,6 +46,10 @@
   border: 1px solid #ccc;
   border-radius: 4px;
   cursor: pointer;
+}
+
+.zero {
+  width: 200%;
 }
 
 .operator {
